<resources>
    <string name="app_name">Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error">خطای اتصال شبکه! لطفا از روشن بودن اینترنت اطمینان حاصل کنید</string>
    <string name="search">search</string>
    <string name="shopping_cart_list">لیست سفارشات</string>
    <string name="total_price">قیمت نهایی</string>
    <string name="product_image">product image</string>
    <string name="reviews">نظرات</string>
    <string name="price">قیمت :</string>
    <string name="price_eng">price</string>
    <string name="related_products">محصولات مرتبط</string>
    <string name="shopping_cart_is_empty">سبد خريد خالی است</string>
    <string name="please_register_a_costumer">لطفا ابتدا یک مشتری رجیستر کنید</string>
    <string name="wait_for_applying_order">جهت ثبت سفارش منتظر بمانید</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="rating">امتیاز</string>
    <string name="apply_review">ثبت نظر</string>
    <string name="connection_lost">Connection Lost!</string>
    <string name="pictures">عکس ها</string>
    <string name="product_name">نام محصول :</string>
    <string name="add_to_shopping_cart">افزودن به سبد خرید</string>
    <string name="loading">در حال لود شدن…</string>
    <string name="purchase_status">وضعیت موجودی :</string>
    <string name="views_count">تعداد بازدید :</string>
    <string name="three_dot">…</string>
    <string name="produce_date">تاریخ تولید :</string>
    <string name="description">توضیحات :</string>
    <string name="add_review">افزودن نظر</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="email_type_example">someone@sth.sth</string>
    <string name="family">نام خانوادگی</string>
    <string name="add_address_by_map">افزودن آدرس از روی نقشه</string>
    <string name="add_address">افزودن آدرس</string>
    <string name="you_are_here">شما اینجا هستید</string>
    <string name="please_turn_on_location_access">لطفا دسترسی به لوکیشن را فعال کنید</string>
    <string name="red_and_yellow_store">red and yellow store</string>
    <string name="welcome_to_online_store">به فروشگاه آنلاین خوش آمدید</string>
    <string name="category_name">category name</string>
    <string name="address_name">نام نشانی</string>
    <string name="home_school_office_etc">منزل , مدرسه , اداره و…</string>
    <string name="go_to_map">برو به نقشه</string>
    <string name="address">آدرس</string>
    <string name="city_street_number_etc">شهر…-خیابان …-کوچه…-پلاک…</string>
    <string name="choose_address">انتخاب آدرس</string>
    <string name="add_to_address_list">افزودن به لیست آدرسها</string>
    <string name="address_list">لیست آدرس ها</string>
    <string name="error_occured">error_occured</string>
    <string name="something_went_wrong">خطایی رخ داده است!</string>
    <string name="retry_error">تلاش مجدد</string>
    <string name="category">دسته بندی :</string>
    <string name="night_mode">حالت شب</string>
    <string name="customer_info">مشخصات مشتری</string>
    <string name="you_havent_register_yet_for_showing_info_register">شما در برنامه ثبت نام نکرده اید. جهت ثبت سفارش ثبت نام کنید</string>
    <string name="register">ثبت نام</string>
    <string name="category_without_dot">دسته بندی</string>
    <string name="newest">جدیدترین</string>
    <string name="most_popular">پربازدیدترین</string>
    <string name="bests">بهترین ها</string>
    <string name="add_address_of_map">اضافه کردن آدرس</string>
    <string name="cancel">انصراف</string>
    <string name="search_here">search here</string>
    <string name="search_button">search_button</string>
    <string name="arranging">مرتب سازی</string>
    <string name="ascending_descending">صعودی/نزولی</string>
    <string name="color">رنگ</string>
    <string name="size">سايز</string>
    <string name="total">total</string>
    <string name="add_coupon_code">کد تخفیف را وارد کنید</string>
    <string name="apply_coupon_code">اعمال کد تخفیف</string>
    <string name="send_order">ثبت سفارش</string>
    <string name="not_available">not available</string>
    <string name="delete_review_button">delete review button</string>
    <string name="edit_review_button">edit review button</string>
    <string name="sales_product_images">sales product images</string>
    <string name="order_name">order name</string>
    <string name="count">count</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">حذف</string>
    <string name="delete_customer">حذف مشتری</string>
    <string name="edit_customer">ویرایش مشتری</string>
    <string name="edit">ویرایش</string>
    <string name="save_customer">ذخیره مشتری</string>
    <string name="show_more">نمایش بیشتر</string>
    <string name="please_choose_or_add_an_address">لطفا یک ادرس انتخاب یا وارد کنید</string>
    <string name="this_address_already_exist">این آدرس قبلا ثبت شده است</string>
    <string name="new_address_added">آدرس جدید ثبت شد</string>
    <string name="wait_for_registering_customer">جهت ثبت مشتری منتظر بمانید</string>
    <string name="customer_registered">مشتری ذخیره شد</string>
    <string name="customer_edited">ویرایش مشتری با موفقیت انجام شد</string>
    <string name="wait_for_editing_customer">جهت ویرایش مشتری منتظر بمانید</string>
    <string name="fill_here">لطفا فیلد را پر کنید</string>
    <string name="email_form_is_invalid">فرم ایمیل صحیح نمی باشد</string>
    <string name="editing_customer_failed">\" ویرایش مشتری با خطا مواجه شذ \"</string>
    <string name="wait_for_deleting_customer">جهت حذف مشتری منتظر بمانید</string>
    <string name="deleting_customer_failed">\" حذف مشتری با خطا مواجه شد \"</string>
    <string name="customer_deleted">مشتری با موفقیت حذف شد</string>
    <string name="this_review_doesnt_exist">این نظر قبلا حذف شده یا در سرور موجود نیست</string>
    <string name="review_sent_successfuly">نظر شما با موفقیت ارسال شد</string>
    <string name="wait_for_sending_review">جهت ثبت نظر منتظر بمانید</string>
    <string name="review_sending_failed">مشکلی در ارسال نظر رخ داده است مجددا تلاش کنید</string>
    <string name="review_deleted_successfuly">نظر شما با موفقیت حذف شد</string>
    <string name="wait_for_deleting_review">جهت حذف نظر منتظر بمانید</string>
    <string name="review_deleting_failed">مشکلی در حذف نظر رخ داده است مجددا تلاش کنید</string>
    <string name="review_edited_successfuly">نظر شما با موفقیت ویرایش شد</string>
    <string name="wait_for_editing_review">جهت ویرایش نظر منتظر بمانید</string>
    <string name="review_editing_failed">مشکلی در ویرایش نظر رخ داده است مجددا تلاش کنید</string>
    <string name="order_sent_successfuly">سفارش شما با موفقیت ثبت شد</string>
    <string name="order_sending_failed">\"  در حال حاضر ارسال سفارش امکان پذیر نیست\"</string>
    <string name="wait_for_sending_order">جهت ثبت سفارش منتظر بمانید</string>
    <string name="coupons_are_not_available_now">\" متاسفانه کدهای تخفیف درحال حاضر قابل اعمال نیست\"</string>
    <string name="please_choose_an_address">لطفا یک آدرس انتخاب کنید</string>


    <string-array name="asc_dsc">
        <item> </item>
        <item>صعودی</item>
        <item>نزولی</item>
    </string-array>

    <string-array name="category">
        <item> </item>
        <item>بهداشت</item>
        <item>پوشاک زنانه</item>
        <item>پوشاک مردانه</item>
        <item>دیجیتال</item>
        <item>ساعت و مچ بند هوشمند</item>
        <item>سوپرمارکت</item>
        <item>فروش ویژه</item>
        <item>فیلم</item>
        <item>کتاب و مجلات</item>
        <item>کتاب و هنر</item>
    </string-array>

    <string-array name="sort">
        <item> </item>
        <item>پرفروش ترین</item>
        <item>قیمت</item>
        <item>جدیدترین</item>
    </string-array>

    <string-array name="color">
        <item> </item>
        <item>مشکی</item>
        <item>سفيد</item>
        <item>آبی</item>
        <item>صورتی</item>
        <item>نارنجی</item>
        <item>مرجانی</item>
    </string-array>

    <string-array name="size">
        <item> </item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>

</resources>