<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.categories.CategoriesFragment">

        <LinearLayout
            android:id="@+id/ll_category_products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:background="@drawable/round_corner_colored_outline"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/loading"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/category"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_specific_category_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                android:visibility="gone"
                android:padding="5sp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2" />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:lottie_rawRes="@raw/loading_dots"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_connection_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="160dp"
            android:visibility="gone">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/error_occured"
                android:src="@drawable/lost_connection" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/something_went_wrong"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_retry_categoriesfrgmnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:text="@string/retry_error" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>