<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_corner_colored_outline"
    tools:context=".ui.customer.CustomerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_create_customer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="10sp"
            android:orientation="vertical"
            tools:context=".ui.customer.CustomerFragment">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/family"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_type_example"
                android:inputType="textEmailAddress" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_add_address_by_map"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_address"
                app:icon="@drawable/ic_baseline_add_24"
                app:iconGravity="textEnd" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/address"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>


        </LinearLayout>
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="18sp"
                android:padding="10sp"
                 />

            <Button
                android:id="@+id/btn_register_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="40sp"
                android:text="ذخیره مشتری" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_error_connection_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:visibility="gone"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView111"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/lost_connection" />

            <TextView
                android:id="@+id/textView1111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Connection Lost!"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_retry_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:text="retry" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>